Updated Privacy html

--- a/privacy.html
+++ b/privacy.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <!-- HERO FLAG HEADER -->
+  <!-- HERO FLAG HEADER (FULL WIDTH) -->
   <div class="hero-header">
     PRIVACY POLICY – MODULAR GUNWORKS LLC
   </div>
@@ -70,17 +70,19 @@
       <button id="expand-collapse-all" class="expand-all-btn">Expand All</button>
 
       <!-- INTRO -->
-      <div id="sec-privacy-intro" class="policy-section">
+      <div id="sec-privacy-intro" class="doc-section-anchor"></div>
+      <div class="policy-section">
         <button class="policy-toggle">Introduction</button>
         <div class="policy-content">
           <p>Modular Gunworks LLC (“Modular Gunworks”, “we”, “us”, or “our”) respects your privacy and is committed to protecting it through this Privacy Policy.</p>
           <p>This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website, purchase products, contact our support team, engage with us on social media, or otherwise interact with our services (“Services”).</p>
-          <p>By accessing or using our Services, you agree to the practices described in this Privacy Privacy. If you do not agree, you should discontinue use of our Services.</p>
+          <p>By accessing or using our Services, you agree to the practices described in this Privacy Policy. If you do not agree, you should discontinue use of our Services.</p>
         </div>
       </div>
 
       <!-- CHANGES -->
-      <div id="sec-privacy-changes" class="policy-section">
+      <div id="sec-privacy-changes" class="doc-section-anchor"></div>
+      <div class="policy-section">
         <button class="policy-toggle">Changes to This Privacy Policy</button>
         <div class="policy-content">
           <p>We may update this Privacy Policy from time to time. When changes occur, we will revise the “Last Updated” date at the top of this page. In some cases, we may provide additional notice, such as posting an announcement on our homepage or sending an email notification.</p>
@@ -89,7 +91,8 @@
       </div>
 
       <!-- INFORMATION COLLECTION -->
-      <div id="sec-privacy-collection" class="policy-section">
+      <div id="sec-privacy-collection" class="doc-section-anchor"></div>
+      <div class="policy-section">
         <button class="policy-toggle">Information Collection</button>
         <div class="policy-content">
           <p>We collect information in several ways, including information you provide directly, information collected automatically, and information from third-party sources.</p>
@@ -124,7 +127,8 @@
       </div>
 
       <!-- WHY WE PROCESS -->
-      <div id="sec-privacy-processing" class="policy-section">
+      <div id="sec-privacy-processing" class="doc-section-anchor"></div>
+      <div class="policy-section">
         <button class="policy-toggle">Why We Process Your Information</button>
         <div class="policy-content">
           <p>We use personal information for the following purposes:</p>
@@ -142,7 +146,8 @@
       </div>
 
       <!-- COOKIES -->
-      <div id="sec-privacy-cookies" class="policy-section">
+      <div id="sec-privacy-cookies" class="doc-section-anchor"></div>
+      <div class="policy-section">
         <button class="policy-toggle">Cookies & Similar Technologies</button>
         <div class="policy-content">
           <h4>Cookies</h4>
@@ -157,7 +162,8 @@
       </div>
 
       <!-- CALIFORNIA -->
-      <div id="sec-privacy-california" class="policy-section">
+      <div id="sec-privacy-california" class="doc-section-anchor"></div>
+      <div class="policy-section">
         <button class="policy-toggle">California Shine the Light Disclosure</button>
         <div class="policy-content">
           <p>California residents with an established business relationship may request information about categories of personal information shared with third parties for direct marketing purposes during the preceding calendar year.</p>
@@ -166,7 +172,8 @@
       </div>
 
       <!-- CONTACT -->
-      <div id="sec-privacy-contact" class="policy-section">
+      <div id="sec-privacy-contact" class="doc-section-anchor"></div>
+      <div class="policy-section">
         <button class="policy-toggle">Contact Us</button>
         <div class="policy-content">
           <p>If you have questions about this Privacy Policy or your personal information, please contact us:</p>
@@ -178,7 +185,8 @@
       </div>
 
       <!-- STATE NOTICES -->
-      <div id="sec-privacy-state-notices" class="policy-section">
+      <div id="sec-privacy-state-notices" class="doc-section-anchor"></div>
+      <div class="policy-section">
         <button class="policy-toggle">US State Privacy Notices</button>
         <div class="policy-content">
           <p>Certain states provide additional privacy rights to their residents. If you reside in a state with applicable privacy laws, you may have rights such as:</p>
@@ -193,7 +201,8 @@
       </div>
 
       <!-- PRIVACY REQUEST -->
-      <div id="sec-privacy-request" class="policy-section">
+      <div id="sec-privacy-request" class="doc-section-anchor"></div>
+      <div class="policy-section">
         <button class="policy-toggle">Make a Privacy Request</button>
         <div class="policy-content">
           <p>You may submit a privacy request to access, delete, or correct your personal information by contacting us at:</p>
@@ -203,7 +212,8 @@
       </div>
 
       <!-- PRIVACY CHOICES -->
-      <div id="sec-privacy-choices" class="policy-section">
+      <div id="sec-privacy-choices" class="doc-section-anchor"></div>
+      <div class="policy-section">
         <button class="policy-toggle">Your Privacy Choices</button>
         <div class="policy-content">
           <p>You may have the ability to:</p>
