Header title privacy

--- a/privacy.html
+++ b/privacy.html
@@ -9,11 +9,13 @@
 
 <body>
 
-  <!-- HERO FLAG HEADER (FULL WIDTH) -->
-  <div class="hero-header">
-    PRIVACY POLICY – MODULAR GUNWORKS LLC
+   <!-- HERO FLAG HEADER -->
+ <a href="index.html" class="hero-header">
+  <div class="hero-text">
+    <div class="hero-title">MODULAR GUNWORKS LLC</div>
+    <div class="hero-subtitle">Privacy Policy</div>
   </div>
-
+</a>
   <!-- MAIN SITE HEADER -->
   <header class="site-header">
     <div class="header-left"></div>
