--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 
 <body>
 
-  <!-- HERO FLAG HEADER (FULL WIDTH) -->
-  <div class="hero-header">
-    WELCOME TO MODULAR GUNWORKS LLC
-  </div>
-
-  <!-- MAIN SITE HEADER (LOGO, SEARCH, ACCOUNT LINKS) -->
+  <!-- TOP HEADER BAR (LOGO + SEARCH + ACCOUNT LINKS) -->
   <header class="site-header">
-    <div class="header-left"></div> <!-- NEW -->
+    <div class="header-left">
+      <img src="images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo">
+    </div>
+
     <div class="header-center">
-      <input type="text" class="search-bar" placeholder="Search products...">
+      <input type="text" class="search-bar" placeholder="Search ammo, gear, or answers...">
     </div>
 
     <div class="header-right">
@@ -25,10 +23,9 @@
       <a href="#">Help Center</a>
       <a href="#">View Cart</a>
     </div>
-
   </header>
 
-  <!-- NAVIGATION -->
+  <!-- CATEGORY NAVIGATION (STICKY) -->
   <nav class="category-nav">
     <a href="shop/ammunition.md">Ammunition</a>
     <a href="shop/guns.md">Guns</a>
@@ -47,6 +44,11 @@
     <h2>Under Construction</h2>
     <p>Use Code: <strong>Build</strong> • Free Shipping Over $249</p>
   </section>
+
+  <!-- HERO FLAG HEADER (FULL WIDTH) -->
+  <div class="hero-header">
+    <div class="hero-text">WELCOME TO MODULAR GUNWORKS LLC</div>
+  </div>
 
  <!-- CATEGORY GRID -->
 <section class="category-grid">
