Try and center search

--- a/index.html
+++ b/index.html
@@ -9,23 +9,26 @@
 <body>
 
   <!-- TOP HEADER BAR (LOGO + SEARCH + ACCOUNT LINKS) -->
-  <header class="site-header">
-    <div class="header-left">
-      <img src="images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo">
-    </div>
-<form class="search-form" action="/search">
-  <input type="text" class="search-bar" name="q" placeholder="Search ammo, gear, or answers...">
-  <button type="submit" class="search-button">
-    <img src="images/search-icon.svg" alt="Search">
-  </button>
-</form>
+ <header class="site-header">
+  <div class="header-left">
+    <img src="images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo">
+  </div>
 
-    <div class="header-right">
-      <a href="#">Account Login</a>
-      <a href="#">Help Center</a>
-      <a href="#">View Cart</a>
-    </div>
-  </header>
+  <div class="header-center">
+    <form class="search-form" action="/search">
+      <input type="text" class="search-bar" name="q" placeholder="Search ammo, gear, or answers...">
+      <button type="submit" class="search-button">
+        <img src="images/search-icon.svg" alt="Search">
+      </button>
+    </form>
+  </div>
+
+  <div class="header-right">
+    <a href="#">Account Login</a>
+    <a href="#">Help Center</a>
+    <a href="#">View Cart</a>
+  </div>
+</header>
 
   <!-- CATEGORY NAVIGATION (STICKY) -->
   <nav class="category-nav">
