--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
     <a href="#">View Cart</a>
   </div>
 </header>
-<!-- PROMO BANNER --> 
- <div class="promo-banner"> Under Construction • Use Code: BUILD • Free Shipping Over $249 
-   </div>
+<!-- PROMO BANNER --> <div class="promo-banner"> Under Construction • Use Code: BUILD • Free Shipping Over $249 </div>
   <!-- CATEGORY NAVIGATION (STICKY) -->
   <nav class="category-nav">
     <a href="shop/ammunition.md">Ammunition</a>
