Updated index promo banner

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
     <a href="shop/brands.md">Brands</a>
     <a href="shop/sale.md">ON SALE</a>
   </nav>
+ 
+  <!-- PROMO BANNER -->
+  <section class="promo-banner">
+    <h2>Under Construction</h2>
+    <p>Use Code: <strong>Build</strong> • Free Shipping Over $249</p>
+  </section>
 
   <!-- HERO FLAG HEADER (FULL WIDTH) -->
   <div class="hero-header">
