--- a/terms.html
+++ b/terms.html
@@ -1220,5 +1220,20 @@
     window.location.href = 'https://www.google.com';
   };
 </script>
+<script>
+  const toggleBtn = document.getElementById("theme-toggle");
+  const currentTheme = localStorage.getItem("theme");
+
+  if (currentTheme === "dark") {
+    document.body.classList.add("dark-theme");
+  }
+
+  toggleBtn.onclick = () => {
+    document.body.classList.toggle("dark-theme");
+    const isDark = document.body.classList.contains("dark-theme");
+    localStorage.setItem("theme", isDark ? "dark" : "light");
+  };
+</script>
+
 </body>
 </html>
