--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     <a href="#">Account Login</a>
     <a href="#">Help Center</a>
     <a href="#">View Cart</a>
-    <button id="theme-toggle" class="theme-toggle">Toggle Theme</button>
+    <button id="theme-toggle" class="theme-toggle-icon" aria-label="Toggle Theme">
+  <img id="theme-icon" src="images/icon-moon.svg" alt="Toggle Theme" />
+</button>
+
   </div>
 </header>
 
@@ -223,16 +226,21 @@
 </script>
 <script>
   const toggleBtn = document.getElementById("theme-toggle");
+  const themeIcon = document.getElementById("theme-icon");
   const currentTheme = localStorage.getItem("theme");
 
-  if (currentTheme === "dark") {
-    document.body.classList.add("dark-theme");
+  function applyTheme(theme) {
+    document.body.classList.toggle("dark-theme", theme === "dark");
+    themeIcon.src = theme === "dark" ? "images/icon-sun.svg" : "images/icon-moon.svg";
+    localStorage.setItem("theme", theme);
   }
 
+  // Apply saved theme on load
+  applyTheme(currentTheme === "dark" ? "dark" : "light");
+
   toggleBtn.onclick = () => {
-    document.body.classList.toggle("dark-theme");
-    const isDark = document.body.classList.contains("dark-theme");
-    localStorage.setItem("theme", isDark ? "dark" : "light");
+    const newTheme = document.body.classList.contains("dark-theme") ? "light" : "dark";
+    applyTheme(newTheme);
   };
 </script>
 
