--- a/terms.html
+++ b/terms.html
@@ -19,31 +19,52 @@
   </div>
 </a>
   <!-- MAIN SITE HEADER -->
-  <header class="site-header">
-    <div class="header-left"></div>
-    <div class="header-center">
-      <input type="text" class="search-bar" placeholder="Search products...">
-    </div>
-    <div class="header-right">
-      <a href="#">Account Login</a>
-      <a href="#">Help Center</a>
-      <a href="#">View Cart</a>
-    </div>
-  </header>
+ <header class="site-header">
+  <div class="header-left">
+    <img src="images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo" id="site-logo">
+  </div>
+
+  <div class="header-center">
+    <form class="search-form" action="/search">
+      <input type="text" class="search-bar" name="q" placeholder="Search ammo, gear, or answers...">
+      <button type="submit" class="search-button">
+        <img src="images/search-icon.svg" alt="Search">
+      </button>
+    </form>
+  </div>
+
+  <div class="header-right">
+    <a href="#">Account Login</a>
+    <a href="#">Help Center</a>
+    <a href="#">View Cart</a>
+    <button id="theme-toggle" class="theme-toggle-icon" aria-label="Toggle Theme">
+      <span id="theme-icon">
+        <!-- Default icon: Moon (light mode) -->
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
+             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M21 12.79A9 9 0 1 1 11.21 3
+                   7 7 0 0 0 21 12.79z"></path>
+        </svg>
+      </span>
+    </button>
+  </div>
+</header>
+
 
   <!-- NAVIGATION -->
-  <nav class="category-nav">
-    <a href="shop/ammunition.md">Ammunition</a>
-    <a href="shop/guns.md">Guns</a>
-    <a href="shop/magazines.md">Magazines</a>
-    <a href="shop/gun-parts.md">Gun Parts</a>
-    <a href="shop/gear.md">Gear</a>
-    <a href="shop/optics.md">Optics & Sights</a>
-    <a href="shop/reloading.md">Reloading</a>
-    <a href="shop/survival.md">Prep & Survival</a>
-    <a href="shop/brands.md">Brands</a>
-    <a href="shop/sale.md">ON SALE</a>
-  </nav>
+ <nav class="category-nav">
+  <a href="shop/ammunition.html">Ammunition</a>
+  <a href="shop/guns.md">Guns</a>
+  <a href="shop/magazines.md">Magazines</a>
+  <a href="shop/gun-parts.md">Gun Parts</a>
+  <a href="shop/gear.md">Gear</a>
+  <a href="shop/optics.md">Optics & Sights</a>
+  <a href="shop/reloading.md">Reloading</a>
+  <a href="shop/survival.md">Prep & Survival</a>
+  <a href="shop/brands.md">Brands</a>
+  <a href="shop/sale.md">ON SALE</a>
+</nav>
+
 
   <!-- DOCUMENT HUB LAYOUT -->
   <div class="doc-layout">
