tried to comment out headers

--- a/terms.html
+++ b/terms.html
@@ -11,13 +11,14 @@
 
 <body>
 
-  <!-- HERO FLAG HEADER -->
+  <!-- HERO FLAG HEADER -
  <a href="index.html" class="hero-header">
   <div class="hero-text">
     <div class="hero-title">MODULAR GUNWORKS LLC</div>
     <div class="hero-subtitle">TERMS & DOCUMENT HUB</div>
   </div>
-</a>
+</a> -->
+
   <!-- MAIN SITE HEADER -->
  <header class="site-header">
   <div class="header-left">
@@ -65,7 +66,10 @@
   <a href="shop/sale.md">ON SALE</a>
 </nav>
 
-
+<!-- HERO FLAG HEADER (FULL WIDTH) -->
+  <div class="hero-header">
+    <div class="hero-text">WELCOME TO MODULAR GUNWORKS LLC</div>
+  </div>
   <!-- DOCUMENT HUB LAYOUT -->
   <div class="doc-layout">
 
