--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     <a href="shop/sale.md">ON SALE</a>
   </nav>
  
-  <!-- PROMO BANNER -->
+  <!-- PROMO BANNER -
   <section class="promo-banner">
     <h2>Under Construction</h2>
     <p>Use Code: <strong>Build</strong> • Free Shipping Over $249</p>
-  </section>
+  </section> -->
 
   <!-- HERO FLAG HEADER (FULL WIDTH) -->
   <div class="hero-header">
