Tried to update all headers

--- a/privacy.html
+++ b/privacy.html
@@ -9,13 +9,14 @@
 
 <body>
 
-   <!-- HERO FLAG HEADER -->
+   <!-- HERO FLAG HEADER -
  <a href="index.html" class="hero-header">
   <div class="hero-text">
     <div class="hero-title">MODULAR GUNWORKS LLC</div>
     <div class="hero-subtitle">Privacy Policy</div>
   </div>
-</a>
+</a>-->
+
   <!-- MAIN SITE HEADER -->
   <header class="site-header">
     <div class="header-left"></div>
@@ -42,7 +43,11 @@
     <a href="shop/brands.md">Brands</a>
     <a href="shop/sale.md">ON SALE</a>
   </nav>
-
+<!-- HERO FLAG HEADER (FULL WIDTH) -->
+  <div class="hero-header">
+    <div class="hero-title">MODULAR GUNWORKS LLC</div>
+    <div class="hero-subtitle">TERMS & DOCUMENT HUB</div>
+  </div>
   <!-- DOCUMENT HUB LAYOUT -->
   <div class="doc-layout">
 
