--- a/shop/ammunition.html
+++ b/shop/ammunition.html
@@ -63,7 +63,10 @@
     <p>RSR Dealer Inventory Coming Soon • Sign Up for Alerts</p>
   </section>
   -->
-
+<!-- HERO FLAG HEADER (FULL WIDTH) -->
+  <div class="hero-header">
+    <div class="hero-text"></div>
+  </div>
   <!-- AMMUNITION PAGE HERO -->
   <section class="ammo-hero">
     <div class="ammo-hero-inner">
