--- a/terms.html
+++ b/terms.html
@@ -68,7 +68,8 @@
 
 <!-- HERO FLAG HEADER (FULL WIDTH) -->
   <div class="hero-header">
-    <div class="hero-text">WELCOME TO MODULAR GUNWORKS LLC</div>
+    <div class="hero-title">MODULAR GUNWORKS LLC</div>
+    <div class="hero-subtitle">TERMS & DOCUMENT HUB</div>
   </div>
   <!-- DOCUMENT HUB LAYOUT -->
   <div class="doc-layout">
