--- a/shop/ammunition.html
+++ b/shop/ammunition.html
@@ -65,7 +65,7 @@
   -->
 <!-- HERO FLAG HEADER (FULL WIDTH) -->
   <div class="hero-header">
-    <div class="hero-text"></div>
+    <div class="hero-text">Ammunition</div>
   </div>
   <!-- AMMUNITION PAGE HERO -->
   <section class="ammo-hero">
