Updated container ammunition

--- a/shop/ammunition.html
+++ b/shop/ammunition.html
@@ -119,6 +119,7 @@
 
     <!-- CONTENT: SORT BAR + PRODUCT GRID -->
     <section class="ammo-main">
+      <div id="ammo-container"></div>
       <div class="ammo-sort-bar">
         <div class="ammo-sort-left">
           <span class="ammo-result-count">Showing placeholder inventory • RSR integration coming soon</span>
