--- a/shop/ammunition.html
+++ b/shop/ammunition.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <!-- TOP HEADER BAR -->
+  <!-- HEADER -->
   <header class="site-header">
     <div class="header-left">
       <img src="../images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo" id="site-logo">
@@ -28,7 +28,6 @@
       <a href="#">Account Login</a>
       <a href="#">Help Center</a>
       <a href="#">View Cart</a>
-
       <button id="theme-toggle" class="theme-toggle-icon" aria-label="Toggle Theme">
         <span id="theme-icon">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
@@ -41,7 +40,7 @@
     </div>
   </header>
 
-  <!-- CATEGORY NAVIGATION -->
+  <!-- NAVIGATION -->
   <nav class="category-nav">
     <a href="ammunition.html" class="active-category">Ammunition</a>
     <a href="guns.html">Guns</a>
@@ -55,12 +54,11 @@
     <a href="sale.html">ON SALE</a>
   </nav>
 
-  <!-- HERO FLAG HEADER -->
+  <!-- HERO -->
   <div class="hero-header">
     <div class="hero-text">Ammunition</div>
   </div>
 
-  <!-- AMMO HERO -->
   <section class="ammo-hero">
     <div class="ammo-hero-inner">
       <h1>Ammunition</h1>
@@ -68,46 +66,44 @@
     </div>
   </section>
 
-  <!-- AMMUNITION LAYOUT -->
+  <!-- PAGE LAYOUT -->
   <main class="ammo-layout">
 
-    <!-- FILTER SIDEBAR -->
+    <!-- SIDEBAR FILTERS -->
     <aside class="ammo-sidebar">
       <h2>Filter Ammo</h2>
 
-      <div class="ammo-filter-group">
+      <div id="filter-caliber" class="ammo-filter-group">
         <h3>Caliber</h3>
-        <ul>
-          <li><a href="?caliber=9mm">9mm Luger</a></li>
-          <li><a href="?caliber=556">5.56 NATO / .223</a></li>
-          <li><a href="?caliber=308">.308 Win</a></li>
-          <li><a href="?caliber=65cm">6.5 Creedmoor</a></li>
-          <li><a href="?caliber=22lr">.22 LR</a></li>
-          <li><a href="?caliber=12ga">12 Gauge</a></li>
-        </ul>
+        <ul class="filter-list"></ul>
       </div>
 
-      <div class="ammo-filter-group">
-        <h3>Type</h3>
-        <ul>
-          <li><a href="?type=fmj">FMJ / Target</a></li>
-          <li><a href="?type=jhp">JHP / Defense</a></li>
-          <li><a href="?type=match">Match / Precision</a></li>
-          <li><a href="?type=steel">Steel Case</a></li>
-          <li><a href="?type=bulk">Bulk Packs</a></li>
-        </ul>
-      </div>
-
-      <div class="ammo-filter-group">
+      <div id="filter-brand" class="ammo-filter-group">
         <h3>Brand</h3>
-        <ul>
-          <li><a href="?brand=Federal">Federal</a></li>
-          <li><a href="?brand=Winchester">Winchester</a></li>
-          <li><a href="?brand=Hornady">Hornady</a></li>
-          <li><a href="?brand=PMC">PMC</a></li>
-          <li><a href="?brand=PPU">PPU</a></li>
+        <ul class="filter-list"></ul>
+      </div>
+
+      <div id="filter-type" class="ammo-filter-group">
+        <h3>Bullet Type</h3>
+        <ul class="filter-list"></ul>
+      </div>
+
+      <div id="filter-case" class="ammo-filter-group">
+        <h3>Case Material</h3>
+        <ul class="filter-list"></ul>
+      </div>
+
+      <div id="filter-grain" class="ammo-filter-group">
+        <h3>Grain Weight</h3>
+        <ul class="filter-list">
+          <li><label><input type="checkbox" data-grain="0-40"> 0–40 gr</label></li>
+          <li><label><input type="checkbox" data-grain="41-80"> 41–80 gr</label></li>
+          <li><label><input type="checkbox" data-grain="81-150"> 81–150 gr</label></li>
+          <li><label><input type="checkbox" data-grain="151-250"> 151–250 gr</label></li>
+          <li><label><input type="checkbox" data-grain="251-999"> 250+ gr</label></li>
         </ul>
       </div>
+
     </aside>
 
     <!-- MAIN CONTENT -->
@@ -116,204 +112,35 @@
       <!-- SORT BAR -->
       <div class="ammo-sort-bar">
         <div class="ammo-sort-left">
-          <span class="ammo-result-count">Showing placeholder inventory • RSR integration coming soon</span>
+          <span class="ammo-result-count">Loading inventory...</span>
         </div>
         <div class="ammo-sort-right">
           <label for="sort-by">Sort by:</label>
-          <select id="sort-by" name="sort">
+          <select id="sort-by">
             <option value="featured">Featured</option>
             <option value="price-asc">Price: Low to High</option>
             <option value="price-desc">Price: High to Low</option>
-            <option value="grain-asc">Grain Weight: Low to High</option>
-            <option value="grain-desc">Grain Weight: High to Low</option>
+            <option value="grain-asc">Grain: Low to High</option>
+            <option value="grain-desc">Grain: High to Low</option>
           </select>
         </div>
       </div>
 
-      <!-- PRODUCT GRID (JS RENDERS HERE) -->
-      <div id="ammo-container" class="ammo-grid-wrapper"></div>
+      <!-- CATEGORY SECTIONS (DYNAMIC) -->
+      <div id="category-sections"></div>
 
-      <!-- CATEGORY QUICK LINKS -->
-      <section class="ammo-category-grid">
-        <h2>Shop by Ammo Type</h2>
-        <div class="ammo-category-tiles">
-          <a href="#handgun-ammo" class="ammo-cat-tile">Handgun Ammo</a>
-          <a href="#rifle-ammo" class="ammo-cat-tile">Rifle Ammo</a>
-          <a href="#rimfire-ammo" class="ammo-cat-tile">Rimfire Ammo</a>
-          <a href="#shotgun-ammo" class="ammo-cat-tile">Shotgun Ammo</a>
-          <a href="#specialty-ammo" class="ammo-cat-tile">Specialty / Defense</a>
-        </div>
-      </section>
+      <!-- UNIFIED GRID HEADER -->
+      <h2 class="ammo-unified-header">Industry Standard</h2>
 
-    </section> <!-- closes .ammo-main -->
-  </main> <!-- closes .ammo-layout -->
-
-  <!-- SCRIPTS -->
-  <script src="../scripts/ammo-loader.js"></script>
-  <script src="../scripts/theme-toggle.js"></script>
-
-</body>
-</html>
-
-      <!-- HANDGUN AMMO SECTION -->
-      <section id="handgun-ammo" class="ammo-section">
-        <h2>Handgun Ammunition</h2>
-        <div class="ammo-grid">
-
-          <!-- Example product card -->
-          <article class="ammo-card">
-            <a href="ammo-product.html" class="ammo-card-image-link">
-              <div class="ammo-card-image">
-                <img src="../images/ammo/9mm-generic.jpg" alt="9mm 115gr FMJ - 50 Rounds">
-              </div>
-            </a>
-            <div class="ammo-card-body">
-              <h3 class="ammo-card-title">
-                9mm 115gr FMJ — 50 Rounds
-              </h3>
-              <p class="ammo-card-meta">
-                Federal • Brass • Target
-              </p>
-              <ul class="ammo-card-specs">
-                <li><strong>Caliber:</strong> 9mm Luger</li>
-                <li><strong>Grain:</strong> 115 gr</li>
-                <li><strong>Rounds:</strong> 50</li>
-              </ul>
-              <div class="ammo-card-footer">
-                <div class="ammo-card-price">
-                  <span class="ammo-price-main">$17.99</span>
-                  <span class="ammo-price-sub">$0.36 / rd</span>
-                </div>
-                <a href="ammo-product.html" class="ammo-card-button">View Details</a>
-              </div>
-            </div>
-          </article>
-
-          <!-- Duplicate this card structure for more placeholder items -->
-
-        </div>
-      </section>
-
-      <!-- RIFLE AMMO SECTION -->
-      <section id="rifle-ammo" class="ammo-section">
-        <h2>Rifle Ammunition</h2>
-        <div class="ammo-grid">
-          <!-- Repeat ammo-card blocks here -->
-        </div>
-      </section>
-
-      <!-- RIMFIRE AMMO SECTION -->
-      <section id="rimfire-ammo" class="ammo-section">
-        <h2>Rimfire Ammunition</h2>
-        <div class="ammo-grid">
-          <!-- Repeat ammo-card blocks here -->
-        </div>
-      </section>
-
-      <!-- SHOTGUN AMMO SECTION -->
-      <section id="shotgun-ammo" class="ammo-section">
-        <h2>Shotgun Ammunition</h2>
-        <div class="ammo-grid">
-          <!-- Repeat ammo-card blocks here -->
-        </div>
-      </section>
-
-      <!-- SPECIALTY AMMO SECTION -->
-      <section id="specialty-ammo" class="ammo-section">
-        <h2>Specialty & Defense Ammunition</h2>
-        <div class="ammo-grid">
-          <!-- Repeat ammo-card blocks here -->
-        </div>
-      </section>
+      <!-- UNIFIED GRID (DYNAMIC) -->
+      <div id="ammo-unified-grid" class="ammo-grid"></div>
 
     </section>
   </main>
 
-  <!-- FOOTER (paths adjusted) -->
-  <footer class="site-footer">
-    <div class="footer-columns">
-      <div>
-        <h4>Company</h4>
-        <ul>
-          <li><a href="../about.html">About Modular Gunworks</a></li>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="../contact.html">Contact Us</a></li>
-        </ul>
-      </div>
-
-      <div>
-        <h4>Info</h4>
-        <ul>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">FFL Transfers</a></li>
-          <li><a href="#">Order Status</a></li>
-          <li><a href="#">Shipping Info</a></li>
-        </ul>
-      </div>
-
-      <div>
-        <h4>Legal</h4>
-        <ul>
-          <li><a href="#">Terms & Conditions</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Return Policy</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="footer-bottom">
-      <p>© 2025 Modular Gunworks LLC. All rights reserved.</p>
-      <p><a href="mailto:support@modulargunworks.com">support@modulargunworks.com</a></p>
-    </div>
-  </footer>
-<script src="../scripts/ammo-loader.js"></script>
-<script>
-  const toggleBtn = document.getElementById("theme-toggle");
-  const themeIcon = document.getElementById("theme-icon");
-  const savedTheme = localStorage.getItem("theme");
-
-  const moonSVG = `
-    <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
-         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M21 12.79A9 9 0 1 1 11.21 3
-               7 7 0 0 0 21 12.79z"></path>
-    </svg>
-  `;
-
-  const sunSVG = `
-    <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
-         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <circle cx="12" cy="12" r="5"></circle>
-      <line x1="12" y1="1" x2="12" y2="3"></line>
-      <line x1="12" y1="21" x2="12" y2="23"></line>
-      <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
-      <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
-      <line x1="1" y1="12" x2="3" y2="12"></line>
-      <line x1="21" y1="12" x2="23" y2="12"></line>
-      <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
-      <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
-    </svg>
-  `;
-
-  function applyTheme(theme) {
-    const isDark = theme === "dark";
-    document.body.classList.toggle("dark-theme", isDark);
-    themeIcon.innerHTML = isDark ? sunSVG : moonSVG;
-    localStorage.setItem("theme", theme);
-  }
-
-  // Load saved theme
-  applyTheme(savedTheme === "dark" ? "dark" : "light");
-
-  // Toggle on click
-  toggleBtn.onclick = () => {
-    const newTheme = document.body.classList.contains("dark-theme")
-      ? "light"
-      : "dark";
-    applyTheme(newTheme);
-  };
-</script>
+  <!-- SCRIPTS -->
+  <script src="../scripts/ammo-loader.js"></script>
+  <script src="../scripts/theme-toggle.js"></script>
 
 </body>
 </html>
