updated index hero header

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
   <!-- HERO FLAG HEADER (FULL WIDTH) -->
   <div class="hero-header">
-    <div class="hero-text">WELCOME TO MODULAR GUNWORKS LLC</div>
-  </div>
+  <div class="hero-home-title">WELCOME TO MODULAR GUNWORKS LLC</div>
+</div>
 
  <!-- CATEGORY GRID -->
 <section class="category-grid">
