update ammunition here header

--- a/shop/ammunition.html
+++ b/shop/ammunition.html
@@ -57,7 +57,7 @@
 
   <!-- HERO FLAG HEADER -->
   <div class="hero-header">
-    <div class="hero-text">Ammunition</div>
+    <div class="hero-subtitle">Ammunition</div>
   </div>
 
   <!-- AMMO HERO -->
