Updated banner text size

--- a/shop/ammunition.html
+++ b/shop/ammunition.html
@@ -57,13 +57,13 @@
 
   <!-- HERO FLAG HEADER -->
  <div class="hero-header">
-  <div class="hero-subtitle">Ammunition</div>
+  <div class="hero-home-title">Ammunition</div>
 </div>
   <!-- AMMO HERO -->
   <section class="ammo-hero">
     <div class="ammo-hero-inner">
       <h1>Ammunition</h1>
-      <p>Handgun, rifle, shotgun, and rimfire ammunition from trusted manufacturers — powered by RSR Group distribution.</p>
+      <p>Handgun, rifle, shotgun, and rimfire ammunition from trusted manufacturers</p>
     </div>
   </section>
 
