--- a/terms.html
+++ b/terms.html
@@ -20,10 +20,12 @@
 </a> -->
 
   <!-- MAIN SITE HEADER -->
- <header class="site-header">
-  <div class="header-left">
+ <div class="header-left">
+  <a href="index.html" title="Return to Homepage">
     <img src="images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo" id="site-logo">
-  </div>
+  </a>
+</div>
+
 
   <div class="header-center">
     <form class="search-form" action="/search">
