--- a/terms.html
+++ b/terms.html
@@ -20,11 +20,16 @@
 </a> -->
 
   <!-- MAIN SITE HEADER -->
- <div class="header-left">
-  <a href="index.html" title="Return to Homepage">
-    <img src="images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo" id="site-logo">
-  </a>
-</div>
+ <header class="site-header">
+  <div class="header-left">
+    <a href="/index.html" title="Return to Homepage">
+      <img src="images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo" id="site-logo">
+    </a>
+  </div>
+
+  <div class="header-center">...</div>
+  <div class="header-right">...</div>
+</header>
 
 
   <div class="header-center">
